--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@netlify-builder/deploy": "^2.0.3",
     "bootstrap": "^4.3.1",
     "popper": "^1.0.1",
     "rxjs": "~6.4.0",
